   Suggested by Paige. [MG]
 * @function names can start with numbers again. Requested by Mercutio. [MG]
 * @include and @break now work when entered directly from a client. [MG]
 * The Drop and Give @locks now trigger verb <name>_LOCK`FAILURE attributes
   when you fail to pass them, as described in 'help failure'. Suggested by 
   Cas@BeforeTheDarkness. [MG]
   
Functions:
 * ibreak(), for breaking out of an iter() loop. [Rhost] [MG]
 * New stext() function and %$N sub, equivilent of #$ in @switch, switch*(),
   and reswitch*(), but can be used in nested switches/on user input. [MG]
 * New slev() function, returns the current nesting depth of switches. [MG]
 * maillist() returns a list of @mail messages matching a range, as per
   @mail/list. Suggested by AnneLions. [MG]

Commands:
 * @grep now accepts /wild and /regexp switches, for wildcard/globbing and
   regular expression greps (a la wildgrep() and regrep()). Also /nocase
   for case-insensitive greps. Suggested by Paige. [MG]
 * @attribute now allows limiting attribute values through /enum and
   /limit switches.
   
Fixes:
 * Debug output was sometimes sent to the wrong executor. [GM]
 * A crashbug in @search was fixed. Reported by Paige. [GM]
 * @search elock class failed to report invalid lock strings. Fixed. [GM]
 * @cpattr and @mvattr could break attribute trees. Reported by Sketch. [MG]
 * benchmark() calculated the average incorrectly. Reported by Cheetah. [DC]
 * "look <container>'s <object>" incorrectly stopped working in p1 when
   <object>'s desc was set "nearby". Reported by Yuriko@M*U*SH. [MG]

Version 1.8.4 patchlevel 1                                 Sep 05,  2010

Major Changes:
 * You can now do the equivilent of @command/add, @hook, @function and
   @attribute/access from alias.cnf and restrict.cnf, to add/configure
   commands, functions and standard attributes. Suggested by Paige. [MG]
 * Exits now use @alias for alternate names. The old style of