@@ -45,7 +45,7 @@ ATTR attr[] = {
   {"BUY", AF_NOPROG | AF_PREFIXMATCH, NULL_CHUNK_REFERENCE, 0, NULL},
   {"CHARGES", AF_NOPROG | AF_PREFIXMATCH, NULL_CHUNK_REFERENCE, 0, NULL},
   {"CHATFORMAT", AF_NOPROG | AF_PREFIXMATCH, NULL_CHUNK_REFERENCE, 0, NULL},
-  {"COMMENT", AF_NOPROG | AF_MDARK | AF_WIZARD | AF_PREFIXMATCH,
+  {"COMMENT", AF_NOPROG | AF_MDARK | AF_WIZARD | AF_PREFIXMATCH | AF_NOCOPY,
    NULL_CHUNK_REFERENCE,
    0, NULL},
   {"CONFORMAT", AF_NOPROG | AF_PREFIXMATCH, NULL_CHUNK_REFERENCE, 0, NULL},
@@ -83,30 +83,30 @@ ATTR attr[] = {
   {"INPREFIX", AF_NOPROG | AF_PREFIXMATCH, NULL_CHUNK_REFERENCE, 0, NULL},
   {"INVFORMAT", AF_NOPROG | AF_PREFIXMATCH, NULL_CHUNK_REFERENCE, 0, NULL},
   {"LALIAS", AF_NOPROG | AF_PREFIXMATCH, NULL_CHUNK_REFERENCE, 0, NULL},
-  {"LAST", AF_VISUAL | AF_WIZARD | AF_LOCKED | AF_PREFIXMATCH,
-   NULL_CHUNK_REFERENCE, 0,
-   NULL},
-  {"LASTIP", AF_WIZARD | AF_LOCKED | AF_PREFIXMATCH, NULL_CHUNK_REFERENCE, 0,
-   NULL},
-  {"LASTFAILED", AF_WIZARD | AF_LOCKED | AF_PREFIXMATCH, NULL_CHUNK_REFERENCE,
-   0,
-   NULL},
-  {"LASTLOGOUT", AF_WIZARD | AF_LOCKED | AF_PREFIXMATCH, NULL_CHUNK_REFERENCE,
-   0,
-   NULL},
-  {"LASTPAGED", AF_WIZARD | AF_LOCKED | AF_PREFIXMATCH, NULL_CHUNK_REFERENCE, 0,
-   NULL},
-  {"LASTSITE", AF_WIZARD | AF_LOCKED | AF_PREFIXMATCH, NULL_CHUNK_REFERENCE, 0,
-   NULL},
+  {"LAST", AF_VISUAL | AF_WIZARD | AF_NOCOPY | AF_LOCKED | AF_PREFIXMATCH,
+   NULL_CHUNK_REFERENCE, 0, NULL},
+  {"LASTIP", AF_WIZARD | AF_LOCKED | AF_NOCOPY | AF_PREFIXMATCH,
+    NULL_CHUNK_REFERENCE, 0, NULL},
+  {"LASTFAILED", AF_WIZARD | AF_LOCKED | AF_NOCOPY | AF_PREFIXMATCH,
+    NULL_CHUNK_REFERENCE, 0, NULL},
+  {"LASTLOGOUT", AF_WIZARD | AF_LOCKED | AF_NOCOPY | AF_PREFIXMATCH,
+    NULL_CHUNK_REFERENCE, 0, NULL},
+  {"LASTPAGED", AF_WIZARD | AF_LOCKED | AF_NOCOPY | AF_PREFIXMATCH,
+    NULL_CHUNK_REFERENCE, 0, NULL},
+  {"LASTSITE", AF_WIZARD | AF_LOCKED | AF_NOCOPY | AF_PREFIXMATCH,
+    NULL_CHUNK_REFERENCE, 0, NULL},
   {"LEAVE", AF_NOPROG | AF_PREFIXMATCH, NULL_CHUNK_REFERENCE, 0, NULL},
   {"LFAIL", AF_NOPROG | AF_PREFIXMATCH, NULL_CHUNK_REFERENCE, 0, NULL},
   {"LISTEN", AF_NOPROG | AF_PREFIXMATCH, NULL_CHUNK_REFERENCE, 0, NULL},
-  {"MAILCURF", AF_WIZARD | AF_NOPROG | AF_LOCKED | AF_PREFIXMATCH,
+  {"MAILCURF",
+    AF_WIZARD | AF_NOPROG | AF_LOCKED | AF_PREFIXMATCH | AF_NOCOPY,
    NULL_CHUNK_REFERENCE, 0, NULL},
-  {"MAILFILTERS", AF_WIZARD | AF_NOPROG | AF_LOCKED | AF_PREFIXMATCH,
+  {"MAILFILTERS",
+    AF_WIZARD | AF_NOPROG | AF_LOCKED | AF_PREFIXMATCH | AF_NOCOPY,
    NULL_CHUNK_REFERENCE, 0, NULL},
   {"MAILFILTER", AF_NOPROG | AF_PREFIXMATCH, NULL_CHUNK_REFERENCE, 0, NULL},
-  {"MAILFOLDERS", AF_WIZARD | AF_NOPROG | AF_LOCKED | AF_PREFIXMATCH,
+  {"MAILFOLDERS",
+    AF_WIZARD | AF_NOPROG | AF_LOCKED | AF_NOCOPY | AF_PREFIXMATCH,
    NULL_CHUNK_REFERENCE, 0, NULL},
   {"MAILFORWARDLIST", AF_NOPROG | AF_PREFIXMATCH, NULL_CHUNK_REFERENCE, 0,
    NULL},
@@ -250,7 +250,7 @@ ATTR attr[] = {
   {"XX", 0, NULL_CHUNK_REFERENCE, 0, NULL},
   {"XY", 0, NULL_CHUNK_REFERENCE, 0, NULL},
   {"XZ", 0, NULL_CHUNK_REFERENCE, 0, NULL},
-  {"XYXXY", AF_INTERNAL | AF_NOPROG | AF_LOCKED | AF_WIZARD,
+  {"XYXXY", AF_INTERNAL | AF_NOPROG | AF_LOCKED | AF_NOCOPY | AF_WIZARD,
    NULL_CHUNK_REFERENCE, 0, NULL},
   {"ZENTER", AF_NOPROG | AF_PREFIXMATCH, NULL_CHUNK_REFERENCE, 0, NULL},
   {"ZLEAVE", AF_NOPROG | AF_PREFIXMATCH, NULL_CHUNK_REFERENCE, 0, NULL},
